# joberty-scraper

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  selectors.py
